<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/registrationTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="@dimen/def_margin"
            android:layout_marginTop="78dp"
            android:layout_marginEnd="9dp"
            android:layout_marginRight="@dimen/def_margin"
            android:text="@string/registration"
            android:textAlignment="center"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/userEmali"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView2"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="9dp"
            android:layout_marginLeft="@dimen/def_margin"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="11dp"
            android:layout_marginRight="@dimen/def_margin"
            android:ems="10"

            android:hint="@string/email_address"
            android:inputType="textEmailAddress" />

        <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/def_margin"
        android:layout_marginLeft="@dimen/def_margin"
        android:layout_marginRight="@dimen/def_margin"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/userEmali"

        />
    <EditText
        android:id="@+id/passwordAgainEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/def_margin"
        android:layout_marginLeft="@dimen/def_margin"
        android:layout_marginRight="@dimen/def_margin"
        android:ems="10"
        android:hint="@string/password_again"
        android:inputType="textPassword"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/passwordEditText"
        />



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/passwordAgainEditText"
        android:layout_marginTop="@dimen/def_margin"
        android:layout_marginLeft="@dimen/def_margin"
        android:layout_marginRight="@dimen/def_margin"
        android:layout_centerHorizontal="true">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registration"
            android:onClick="register"
        />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:text="@string/cancel"
            android:onClick="cancel"
            />


    </LinearLayout>

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="156dp"
            android:layout_height="143dp"
            android:layout_below="@+id/registrationTextView"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="128dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="126dp"
            app:srcCompat="@drawable/logo" />
    </RelativeLayout>
</ScrollView>